Changes from jTDS 0.9
=========================

11/19/2004 - Alin Sinpalean
 o Replaced the ColData copy constructor with clone().
 o Added tests to ensure Blob.getBytes(0, length) and Clob.getSubString(0,
   length) fail.

11/18/2004 - Alin Sinpalean
 o More performance improvements: instead of creating new ParamInfo instances
   for each sp_XXX call, the same objects are reused both for fixed parameters
   (optype, fetchtype etc.) and updated column values; also, for addBatch() the
   ParamInfo copy constructor was replaced with clone().
 o Tweaked initial StringBuffer sizes to prevent reallocation as much as
   possible.
 o Corrected a bug that was causing Date values to be inserted just like
   Timestamps (i.e. including the time component).

11/17/2004 - Alin Sinpalean
 o Tiny performance tweaks.
 o Added jta.jar to lib folder to ensure compilation works under Java 1.3.
 o Corrected a problem in ReaderOutputStream that was causing read(byte[]) to
   always return the size of the byte array even if less data was read.
 o Fixed a problem with absolute(-1) (the row position was incorrectly
   updated).
 o Improved performance of MSCursorResultSet, by replacing sp_cursor FETCH_INFO
   calls with simple operations mimicking the behavior of SQL Server
   (incrementing the row count on INSERT and UPDATE).
 o Implemented support for ResultSet.insertRow() when no column is updated
   (i.e. inserting default values) in MSCursorResultSet.
 o Added charsets GB2312 and GBK as aliases for MS936.
 o Corrected bug [1067224] getPrimaryKeys does not return PK_NAME column.

11/15/2004 - Mike Hutchinson
 o Refactored XA support so that the driver will run under JRE 1.3 without
   requiring jta.jar to be available.
 o Revised JTdsXA.DLL to make it more compatible with older versions of MSDTC.
 o Changed XA support so that exception is thrown if not used with SQL 2000.
 o Use of XA connection forces prepareSQL=2 to prevent problems with temporary
   stored procedures.